4996 Fix overflowing table data content

--- a/packages/scandipwa/src/component/MyAccountAddressTable/MyAccountAddressTable.style.scss
+++ b/packages/scandipwa/src/component/MyAccountAddressTable/MyAccountAddressTable.style.scss
@@ -18,4 +18,8 @@
             width: 50%;
         }
     }
+
+    td {
+        overflow-wrap: anywhere;
+    }
 }
